@@ -1,5 +1,6 @@
 Wed Aug 31, 2005 Linas Vepstas <linas@linas.org>
 	* Bump to version number 2.2.2
+	* Bug fix: editing time bring up wrong report
 	* Manually apply patch from sourceforge bug [ 1119338 ] fedora .spec file
 	  is out of date and rpm cannot build rpm
    * Fix bug involving copy of old gnotime files to a new machine
